force-app/main/default/objects/Credit_Limit_History__c/Credit_Limit_History__c.object-meta.xml
<CustomObject>
    <label>Credit Limit History</label>
    <nameField>
        <label>Credit Limit History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Limit History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>