force-app/main/default/objects/Credit_Limit_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Limit History</relationshipLabel>
    <relationshipName>Credit_Limit_History</relationshipName>
    <type>Lookup</type>
</CustomField>