force-app/main/default/objects/Credit_Limit_History__c/fields/New_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>New_Credit_Limit__c</fullName>
    <label>New Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>